@@ -154,3 +154,7 @@ fr:
   time:
     formats:
       picker: "%a, %d %b %Y %H:%M:%S"
+  datetime:
+    prompts:
+      millisec:
+      microsec:
