@@ -162,3 +162,7 @@ ru:
   time:
     formats:
       picker: "%a, %d %b %Y %H:%M:%S"
+  datetime:
+    prompts:
+      millisec:
+      microsec:
